--- a/右键菜单.html
+++ b/右键菜单.html
@@ -52,6 +52,10 @@
         oUl.style.top = e.clientY + "px";
         return false;
     }
+    document.onclick = function(){
+        oUl.style.display = "none";
+    }
+
 
 
 
